<resources>
    <string name="app_name">Find My Fotos</string>
    <string name="map_page">Foto Map</string>
    <string name="fotos_list_page">My Fotos</string>
    <string name="lbl_you_are_at">YOU ARE AT</string>
    <string name="btn_get_location">GET MY LOCATION</string>

    <string name="username">Foto Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signUp">Sign Up</string>
    <string name="login">Login</string>

    <string name="existingUser">Login with existing user!</string>
    <string name="newAccount">Create a new account!</string>
    <string name="newUser">New Foto User</string>
    <string name="saveFoto">Save your Foto!</string>
    <string name="takeFoto">Take Foto</string>
    <string name="viewCollection">View Foto Collection</string>
    <string name="exit">Exit Foto</string>
    <string name="viewMap">Go To Map</string>
    <string name="info">Info</string>

    <string name="privacy_policy">PRIVACY POLICY FOR THE FOTO FIND APPLICATION
This privacy policy governs your use of the software application Mobile App ("Application") for mobile devices that was created by FotoFind. The Application is an application that features taking pictures and storing their location for further viewing.
User Provided Information
Registration with us is mandatory in order to be able to use the basic features of the Application.
The Application obtains the information you provide when you download and register the Application. Registration with us is optional. However, please keep in mind that you may not be able to use some of the features offered by the Application unless you register with us.
When you register with us and use the Application, you generally provide a. your name, email address, age, user name, password and other registration information; b. transaction-related information, such as when you make purchases, respond to any offers, or download or use applications from us; c. information you provide us when you contact us for help; d. credit card information for purchase and use of the Application, and; e. information you enter into our system when using the Application, such as contact information and project management information.
We may also use the information you provided us to contact your from time to time to provide you with important information, required notices and marketing promotions.
Automatically Collected Information
The Application allows users to use their Facebook account to login. The Application may collect information from a users Facebook account, including, but not limited to, the pulling of contact information, friends lists, login information, photos, age, and gender.
In addition, the Application may collect certain information automatically, including, but not limited to, the type of mobile device you use, your mobile devices unique device ID, the IP address of your mobile device, your mobile operating system, the type of mobile Internet browsers you use, and information about the way you use the Application.
Does the Application collect precise real time location information of the device?
When you visit the mobile application, we may use GPS technology (or other similar technology) to determine your current location in order to determine your proximity to a picture. We will not share your current location with other users or partners.
If you do not want us to use your location for the purposes set forth above, you should turn off the location services for the mobile application located in your account settings or in your mobile phone settings and/or within the mobile application.
Do third parties see and/or have access to information obtained by the Application?
Only aggregated, anonymized data is periodically transmitted to external services to help us improve the Application and our service. We will share your information with third parties only in the ways that are described in this privacy statement.
We may disclose User Provided and Automatically Collected Information:
-	as required by law, such as to comply with a subpoena, or similar legal process;
-	when we believe in good faith that disclosure is necessary to protect our rights, protect your safety or the safety of others, investigate fraud, or respond to a government request;
-	with our trusted services providers who work on our behalf, do not have an independent use of the information we disclose to them, and have agreed to adhere to the rules set forth in this privacy statement.
-	if Foto find is involved in a merger, acquisition, or sale of all or a portion of its assets, you will be notified via email and/or a prominent notice on our Web site of any change in ownership or uses of this information, as well as any choices you may have regarding this information.
What are my opt-out rights?
You can stop all collection of information by the Application easily by uninstalling the Application. You may use the standard uninstall processes as may be available as part of your mobile device or via the mobile application marketplace or network. You can also request to opt-out via email, at blah62079@gmail.com.
Data Retention Policy, Managing Your Information
We will retain User Provided data for as long as you use the Application and for a reasonable time thereafter. We will retain Automatically Collected information for up to 24 months and thereafter may store it in aggregate. If you would like us to delete User Provided Data that you have provided via the Application, please contact us at blah62079@gmail.com and we will respond in a reasonable time. Please note that some or all of the User Provided Data may be required in order for the Application to function properly.
Children
We do not use the Application to knowingly solicit data from or market to children under the age of 13. If a parent or guardian becomes aware that his or her child has provided us with information without their consent, he or she should contact us at blah62079@gmail.com. We will delete such information from our files within a reasonable time.
Security
We are concerned about safeguarding the confidentiality of your information. We provide physical, electronic, and procedural safeguards to protect information we process and maintain. For example, we limit access to this information to authorized employees and contractors who need to know that information in order to operate, develop or improve our Application. Please be aware that, although we endeavor provide reasonable security for information we process and maintain, no security system can prevent all potential security breaches.
Changes
This Privacy Policy may be updated from time to time for any reason. We will notify you of any changes to our Privacy Policy by email. You are advised to consult this Privacy Policy regularly for any changes, as continued use is deemed approval of all changes.
Your Consent
By using the Application, you are consenting to our processing of your information as set forth in this Privacy Policy now and as amended by us. "Processing," means using cookies on a computer/hand held device or using or touching information in any way, including, but not limited to, collecting, storing, deleting, using, combining and disclosing information, all of which activities will take place in the United States. If you reside outside the United States your information will be transferred, processed and stored there under United States privacy standards.
Contact us
If you have any questions regarding privacy while using the Application, or have questions about our practices, please contact us via email at blah62079@gmail.com.</string>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Take your Fotos</string>
    <string name="slide_1_desc">Click on the camera icon to take a picture.</string>

    <string name="slide_2_title">Save your Fotos</string>
    <string name="slide_2_desc">Save your picture so it can be viewed later.</string>

    <string name="slide_3_title">Fotos on the Map</string>
    <string name="slide_3_desc">Each picture will be a marker on the map, if you are in the same spot you took the picture you can click See Foto to see those pictures.</string>

    <string name="slide_4_title">Viewing Fotos</string>
    <string name="slide_4_desc">Click show fotos to see all the pictures that were taken at your current location.</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
</resources>
