<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_foto"
        android:title="@string/takeFoto"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_photo_camera_black_24dp">
    </item>
    <item
        android:id="@+id/action_map"
        android:title="@string/viewMap"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_map_black_24dp">
    </item>
    <item
        android:id="@+id/action_exit"
        android:title="@string/exit"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_exit_to_app_black_24dp">
    </item>
    <item
        android:id="@+id/action_info"
        android:title="@string/info"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_info_black_24dp">
    </item>
</menu>