<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent"
    tools:context="com.seacam.fotofind.activity.CreateAccount">

    <EditText
        android:id="@+id/nameCreateAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/username"
        android:textAlignment="center"
        android:nextFocusDown="@+id/passwordEditText"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.186" />

    <EditText
        android:id="@+id/emailCreateAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/email"
        android:textAlignment="center"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@+id/passwordEditText"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.317" />

    <EditText
        android:id="@+id/passwordCreateAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/password"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:nextFocusDown="@+id/passwordEditText"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.458" />

    <EditText
        android:id="@+id/confirmPasswordCreateAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/confirmPassword"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:nextFocusDown="@+id/passwordEditText"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.592" />


    <Button
        android:id="@+id/createUserButton"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/signUp"
        android:textSize="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorBlack"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.747" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="15dp"
        android:text="@string/existingUser"
        android:id="@+id/loginFromCreateAccount"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.876" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newUser"
        android:textColor="@color/colorBlack"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.05" />

</android.support.constraint.ConstraintLayout>
